fix / voice » fetching layers data - fetch content a little bit before the next/prev layer's body is   visible on the screen. - scrolling up, calculate the correct height-diff to compensate   scrollTop position when loading new content (avoid weird scroll jump)

--- a/public/css/components/voice-posts-layer.less
+++ b/public/css/components/voice-posts-layer.less
@@ -1,9 +1,17 @@
 .cv-voice-posts-layer {
   position: relative;
-  min-height: 100px;
-  padding-left: 1px;
   // background-color: rgba(0, 244, 0, .25);
-  margin-bottom: 4rem;
+  padding: 6em 0 6em 1px;
+  margin-top: -6em;
+
+  &.first {
+    padding-top: 0;
+    margin-top: 0;
+  }
+
+  &.last {
+    margin-bottom: -4em;
+  }
 }
 
 .cv-voice-posts-layer__posts {
